# src/main/java/com/cgovern/governor/api/PlansApi.java
@@ -1,0 +1,80 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.4.10).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package com.cgovern.governor.api;
+
+import java.util.List;
+
+import javax.validation.Valid;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+
+import com.cgovern.governor.models.BadRequest;
+import com.cgovern.governor.models.Plan;
+
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
+
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-12-22T04:22:26.530Z")
+
+@Api(value = "projects", description = "the projects API")
+public interface PlansApi {
+
+	@ApiOperation(value = "Create New Plan", nickname = "addPlan", notes = "", response = Plan.class, tags = {
+			"plan", })
+	@ApiResponses(value = { @ApiResponse(code = 201, message = "Created", response = Plan.class),
+			@ApiResponse(code = 400, message = "Bad Request", response = BadRequest.class),
+			@ApiResponse(code = 409, message = "Conflict") })
+	@RequestMapping(value = "/projects/{projectId}/plans", produces = { "application/json" }, consumes = {
+			"application/json" }, method = RequestMethod.POST)
+	ResponseEntity<Plan> addPlan(@ApiParam(value = "", required = true) @PathVariable("projectId") String projectId,
+			@ApiParam(value = "Plan object", required = true) @Valid @RequestBody Plan body);
+
+	
+	@ApiOperation(value = "Delete existing plan", nickname = "deletePlanById", notes = "", response = Plan.class, tags = {
+			"plan", })
+	@ApiResponses(value = { @ApiResponse(code = 204, message = "No Content", response = Plan.class),
+			@ApiResponse(code = 404, message = "Not Found") })
+	@RequestMapping(value = "/projects/{projectId}/plans/{planId}", method = RequestMethod.DELETE)
+	ResponseEntity<Plan> deletePlanById(
+			@ApiParam(value = "", required = true) @PathVariable("projectId") String projectId,
+			@ApiParam(value = "", required = true) @PathVariable("planId") String planId);
+
+	@ApiOperation(value = "Retrieve Existing Plan", nickname = "getPlanById", notes = "", response = Plan.class, tags = {
+			"plan", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = Plan.class),
+			@ApiResponse(code = 404, message = "Not Found") })
+	@RequestMapping(value = "/projects/{projectId}/plans/{planId}", method = RequestMethod.GET)
+	ResponseEntity<Plan> getPlanById(@ApiParam(value = "", required = true) @PathVariable("projectId") String projectId,
+			@ApiParam(value = "", required = true) @PathVariable("planId") String planId);
+
+	@ApiOperation(value = "Retrieve All Plans", nickname = "getPlans", notes = "", response = Plan.class, responseContainer = "List", tags = {
+			"plan", })
+	@ApiResponses(value = {
+			@ApiResponse(code = 200, message = "OK", response = Plan.class, responseContainer = "List") })
+	@RequestMapping(value = "/projects/{projectId}/plans", method = RequestMethod.GET)
+	ResponseEntity<List<Plan>> getPlans(
+			@ApiParam(value = "", required = true) @PathVariable("projectId") String projectId);
+
+
+	@ApiOperation(value = "Update existing Plan", nickname = "updatePlanById", notes = "", response = Plan.class, tags = {
+			"plan", })
+	@ApiResponses(value = { @ApiResponse(code = 204, message = "No Content", response = Plan.class),
+			@ApiResponse(code = 400, message = "Bad Request", response = BadRequest.class),
+			@ApiResponse(code = 404, message = "Not Found") })
+	@RequestMapping(value = "/projects/{projectId}/plans/{planId}", method = RequestMethod.PUT)
+	ResponseEntity<Plan> updatePlanById(
+			@ApiParam(value = "", required = true) @PathVariable("projectId") String projectId,
+			@ApiParam(value = "", required = true) @PathVariable("planId") String planId,
+			@ApiParam(value = "Plan object", required = true) @Valid @RequestBody Plan body);
+
+}
